# ShaderTestPlatform

./: .gitignore  BuildWin.bat  BuildWinRelease.bat  Buildnix.sh  CMakeLists.txt  CMakeListsNIX.txt  DebugUI.cpp  DebugUI.h  HalfEdgeTest.cpp  IMGuiHooks.cpp  IMGuiHooks.h  MSVC.bat  README.md  Scene.cpp  Scene.h  config.h  main.cpp  oglGlutInit.h
Scripting/: Scene.cpp  Scene.h  Scriting.cpp  Scriting.h
Sources/: AABB.cpp  AABB.h  AbstractBuffer.cpp  AbstractBuffer.h  Camera.cpp  Camera.h  Command.cpp  Command.h  Compute.cpp  Compute.h  DebugDraw.cpp  DebugDraw.h  Error.h  ErrorCodes.h  FileBuffer.cpp  FileBuffer.h  GenericTexture.h  ImageBuffer.cpp  ImageBuffer.h  IndexedMesh.cpp  IndexedMesh.h  Log.cpp  Log.h  MAssert.h  MTLParser.cpp  MTLParser.h  MeshTypes.h  OGL.h  ObjModel.cpp  ObjModel.h  ObjParser.cpp  ObjParser.h  PostProcess.cpp  PostProcess.h  ProjectionMatrix.h  RBO.cpp  RBO.h  RBOTexture.cpp  RBOTexture.h  RenderContext.h  (+51 more)
Sources/Tests/: Camera_test.cpp  ImageBuffer_test.cpp  MTLParser_test.cpp  Matrix_test.cpp  ObjParser.cpp  SceneBase.cpp  Vec2_test.cpp  Vec3_test.cpp  Vec4_test.cpp
cmake/: FindFreeGLUT.cmake
